注释maven本地私服

--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
     </build>
 
     <!-- 本地私库Nexus地址 -->
-    <repositories>
+    <!--<repositories>
         <repository>
             <id>central</id>
             <name>Maven myself Mirror</name>
@@ -139,6 +139,6 @@
             </snapshots>
         </repository>
 
-    </repositories>
+    </repositories>-->
 
 </project>
